[package]
name = "liora-rs"
version = "1.0.0"
edition = "2021"
authors = ["Naruya Izumi"]
description = "Liora WhatsApp Bot"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
moka = { version = "0.12", features = ["future"] }
napi = { version = "3", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "3"
axum = "0.8.7"
dotenv = "0.15.0"
dashmap = "6.1.0"
libc = "0.2"